tests/fixtures/dimensions/change_blast_radius/bad/u2.ts
import { core } from "./core";
export const u2 = core + 2;
